--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <html>
+  <head>
+    <title>WilsonVD</title>
+    <link rel="stylesheet" href="index.css">
+  </head>
   <body>
     <div class="nav-header">
     <div class="nav-brand">
       <img src="https://i.ibb.co/HnKFTS0/5.png">
+      <!--<img src="https://i.ibb.co/9sp8HDJ/5.png">-->
     </div>
     <i class="fa fa-bars fa-3x"></i>
     <div class="header-links">
       <ul>
-        <li><a href="#about">About</a></li>
-        <li data-menuanchor="thirdPage"><a href="#portfolio">PORTFOLIO</a></li>
-        <li data-menuanchor="secondPage"><a href="#blog">BLOG</a></li>
-        <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
+        <li data-menuanchor="firstPage"><a href="#about">About</a></li>
+        <li data-menuanchor="secondPage"><a href="#portfolio">Portfolio</a></li>
+        <li data-menuanchor="thirdsPage"><a href="#blog">Blog</a></li>
+        <li data-menuanchor="fourthPage"><a href="#contact">Contact</a></li>
         
         
       </ul>
