added work/project section

--- a/index.html
+++ b/index.html
@@ -164,13 +164,36 @@
                 </div>
                 
                 <div>
-                    <img src="assets/img/work3.jpg" alt="">
+                    <img src="assets/img/work3.jpg" alt="skills">
                 </div>
             </div>
         </section>
 
         <!-- Work -->
+        <section class="work section" id="work">
+            <h2 class="section-title">Work</h2>
 
+            <div class="work__container bd-grid">
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="work1">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work2.jpg" alt="work2">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work3.jpg" alt="work3">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work4.jpg" alt="work4">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work5.jpg" alt="work5">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work6.jpg" alt="work6">
+                </div>
+            </div>
+        </section>
 
         <!-- Contact -->
 
