--- a/index.html
+++ b/index.html
@@ -196,7 +196,19 @@
         </section>
 
         <!-- Contact -->
+        <section class="contact section" id="contact">
+            <h2 class="section-title">Contact</h2>
 
+            <div class="contact__container bd-grid">
+                <form action="" class="contact__form">
+                    <input type="text" placeholder="Name" class="contact__input" name="" id="">
+                    <input type="mail" placeholder="Email" class="contact__input" name="" id="">
+                    <textarea name="" id="" cols="0" rows="10"></textarea>
+
+                    <input type="button" value="Send" class="contact__button button">
+                </form>
+            </div>
+        </section>
 
 
     </main>
