--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </div>
             <div class="nav__manu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link" active>Home</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Skills</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Work</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link" active>Home</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
             </div>
 
@@ -43,16 +43,13 @@
         <section class="home bd-grid" id="home">
             <div class="home__date">
                 <h1 class="home__title">Hi, <br>I'm <span class="home__title-color">Wilson</span><br> Web Developer</h1>
-                <a href="#" class="button">Contact</a>
+                <a href="https://drive.google.com/file/d/1pUZurn8Yqnq06GtXSBN19cMrJ8N0X_Sj/view?usp=sharing" class="button">Contact</a>
             </div>
 
             <div class="home__social">
-                <a href=""# class="home__social-icon"><i class="bx bxl-linkedin-square"></i></a>
-                <a href=""# class="home__social-icon"><i class="bx bxl-instagram" ></i></a>
-                <a href=""# class="home__social-icon"><i class="bx bxl-facebook-square" ></i></a>
-                <a href=""# class="home__social-icon"><i class="bx bxl-codepen" ></i></a>
-                <a href=""# class="home__social-icon"><i class="bx bxl-twitter"></i></a>
-                <a href=""# class="home__social-icon"><i class="bx bxl-github"></i></a>
+                <a href="https://www.linkedin.com/in/wilson-vd/" class="home__social-icon"><i class="bx bxl-linkedin-square"></i></a>
+                <a href="https://codepen.io/wilson0406" class="home__social-icon"><i class="bx bxl-codepen" ></i></a>
+                <a href="https://github.com/Wilson0406" class="home__social-icon"><i class="bx bxl-github"></i></a>
             </div>
 
             <div class="home__img">
@@ -61,7 +58,7 @@
         </section>
 
         <!-- About -->
-        <section class="about section" id=""about>
+        <section class="about section" id="about">
             <h2 class="section-title">About</h2>
 
             <div class="about__container bd-grid">
@@ -214,6 +211,16 @@
     </main>
 
     <!-- FOOTER -->
+    <footer class="footer">
+        <p class="footer__title">Wilson VD</p>
+
+        <div class="footer__social">
+            <a href="https://www.facebook.com/wilsonvidyut.doloy.9" class="footer__icon"><i class="bx bxl-facebook-square"></i></a>
+            <a href="https://www.instagram.com/wilson_vidyut_/" class="footer__icon"><i class="bx bxl-instagram"></i></a>
+            <a href="https://twitter.com/WDoloy" class="footer__icon"><i class="bx bxl-twitter"></i></a>
+        </div>
+        <p>&#169; 2022 designed by bedimcode, enhanced by WilsonVD</p>
+    </footer>
 
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
