--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="assets/img/wilson.ico" type="image/x-icon">
         <!-- Main CSS -->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="assets/css/index.css">
 
         <!-- BOX ICONS -->
         <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -230,6 +230,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!-- Main Javascript -->
-        <script src="assets/js/main.js"></script>
+        <script src="assets/js/index.js"></script>
     </body>
 </html>
