added dark mode toggle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="assets/img/wilson.ico" type="image/x-icon">
         <!-- Main CSS -->
-        <link rel="stylesheet" href="assets/css/index.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- BOX ICONS -->
         <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -18,8 +18,8 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <!-- <a href="#home" class="nav__logo"><h1>Wilson</h1></a> -->
-                    <a href="#home" class="nav__logo"><img src="assets/img/logo2.png" alt="WVD logo" ></a>
+                    <a href="#home" class="nav__logo"><h1>Wilson</h1></a>
+                    <!-- <a href="#home" class="nav__logo"><img src="assets/img/logo2.png" alt="WVD logo" ></a> -->
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -27,9 +27,21 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#project" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <div class="theme-switch-wrapper">
+                            <label class="theme-switch" for="checkbox">
+                                <input type="checkbox" id="checkbox" />
+                                <div class="slider round"></div>
+                          </label>
+                        </div>
+
                     </ul>
+
+                    
+
                 </div>
 
                 <div class="nav__toggle" id="nav-toggle">
@@ -44,13 +56,13 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Wilson</span><br> Web Developer</h1>
 
-                    <a href="https://drive.google.com/file/d/1pUZurn8Yqnq06GtXSBN19cMrJ8N0X_Sj/view?usp=sharing" class="button">Contact</a>
+                    <a href="https://drive.google.com/file/d/1pUZurn8Yqnq06GtXSBN19cMrJ8N0X_Sj/view?usp=sharing" target="_blank" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/wilson-vd/" class="home__social-icon"><i class="bx bxl-linkedin-square"></i></a>
-                <a href="https://codepen.io/wilson0406" class="home__social-icon"><i class="bx bxl-codepen" ></i></a>
-                <a href="https://github.com/Wilson0406" class="home__social-icon"><i class="bx bxl-github"></i></a>
+                    <a href="https://www.linkedin.com/in/wilson-vd/" target="_blank" class="home__social-icon"><i class="bx bxl-linkedin-square"></i></a>
+                    <a href="https://codepen.io/wilson0406" target="_blank" class="home__social-icon"><i class="bx bxl-codepen" ></i></a>
+                    <a href="https://github.com/Wilson0406" target="_blank" class="home__social-icon"><i class="bx bxl-github"></i></a>
                 </div>
 
                 <div class="home__img">
@@ -173,27 +185,27 @@
                 </div>
             </section>
 
-            <!-- Work -->
-            <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+            <!-- Project -->
+            <section class="project section" id="project">
+                <h2 class="section-title">Projects</h2>
 
-                <div class="work__container bd-grid">
-                    <a href="#" class="work__img">
-                        <img src="assets/img/work1.jpg" alt="project1">
+                <div class="project__container bd-grid">
+                    <a href="#" target="_blank" class="project__img">
+                        <img src="assets/img/work1.png" alt="project1">
                     </a>
-                    <a href="#" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="project2">
+                    <a href="#" target="_blank" class="project__img">
+                        <img src="assets/img/work2.png" alt="project2">
                     </a>
-                    <a href="#" class="work__img">
+                    <a href="#" target="_blank" class="project__img">
                         <img src="assets/img/work3.jpg" alt="project3">
                     </a>
-                    <a href="#" class="work__img">
+                    <a href="#" target="_blank" class="project__img">
                         <img src="assets/img/work4.jpg" alt="project4">
                     </a>
-                    <a href="#" class="work__img">
+                    <a href="#" target="_blank" class="project__img">
                         <img src="assets/img/work5.jpg" alt="project5">
                     </a>
-                    <a href="#" class="work__img">
+                    <a href="#" target="_blank" class="project__img">
                         <img src="assets/img/work6.jpg" alt="project6">
                     </a>
                 </div>
@@ -216,11 +228,11 @@
 
         <!-- FOOTER -->
         <footer class="footer">
-            <p class="footer__title">Wilson VD</p>
+            <p class="footer__title">Wilson Vidyut Doloy</p>
             <div class="footer__social">
-                <a href="https://www.facebook.com/wilsonvidyut.doloy.9" class="footer__icon"><i class='bx bxl-facebook-square' ></i></a>
-                <a href="https://www.instagram.com/wilson_vidyut_/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="https://twitter.com/WDoloy" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.facebook.com/wilsonvidyut.doloy.9" target="_blank" class="footer__icon"><i class='bx bxl-facebook-square' ></i></a>
+                <a href="https://www.instagram.com/wilson_vidyut_/" target="_blank" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://twitter.com/WDoloy" target="_blank" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; 2022 designed by Bedimcode, enhanced by WilsonVD</p>
         </footer>
@@ -230,6 +242,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!-- Main Javascript -->
-        <script src="assets/js/index.js"></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
