--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- BOX ICONS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
         <title>Wilson's Portfolio</title>
@@ -72,7 +73,7 @@
                         </mask>
                         <g mask="url(#mask0)">
                             <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                            <image class="home__blob-img" x="50" y="60" href="assets/img/perfil.png"/>
+                            <image class="home__blob-img" x="50" y="60" href="assets/img/profile.png"/>
                         </g>
                     </svg>
                 </div>
@@ -180,7 +181,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="skills" class="skills__img">
+                        <img src="assets/img/work.jpg" alt="skills" class="skills__img">
                     </div>
                 </div>
             </section>
@@ -193,20 +194,20 @@
                     <a href="#" target="_blank" class="project__img">
                         <img src="assets/img/work1.png" alt="project1">
                     </a>
-                    <a href="#" target="_blank" class="project__img">
+                    <a href="https://wilson0406.github.io/Javascript-chatbot/" target="_blank" class="project__img">
                         <img src="assets/img/work2.png" alt="project2">
                     </a>
                     <a href="#" target="_blank" class="project__img">
-                        <img src="assets/img/work3.jpg" alt="project3">
+                        <img src="assets/img/work3.png" alt="project3">
+                    </a>
+                    <a href="https://woogoogle.netlify.app/" target="_blank" class="project__img">
+                        <img src="assets/img/work4.png" alt="project4">
                     </a>
                     <a href="#" target="_blank" class="project__img">
-                        <img src="assets/img/work4.jpg" alt="project4">
+                        <img src="assets/img/work5.png" alt="project5">
                     </a>
                     <a href="#" target="_blank" class="project__img">
-                        <img src="assets/img/work5.jpg" alt="project5">
-                    </a>
-                    <a href="#" target="_blank" class="project__img">
-                        <img src="assets/img/work6.jpg" alt="project6">
+                        <img src="assets/img/work6.png" alt="project6">
                     </a>
                 </div>
             </section>
@@ -229,12 +230,16 @@
         <!-- FOOTER -->
         <footer class="footer">
             <p class="footer__title">Wilson Vidyut Doloy</p>
+            
             <div class="footer__social">
+                <a href="#home" class="footer__icon moveTop"><i class='bx bx-up-arrow-circle bx-fade-up bx-md' ></i></a><br><br>
                 <a href="https://www.facebook.com/wilsonvidyut.doloy.9" target="_blank" class="footer__icon"><i class='bx bxl-facebook-square' ></i></a>
-                <a href="https://www.instagram.com/wilson_vidyut_/" target="_blank" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.instagram.com/wilson_vidyut_/" target="_blank" class="footer__icon"><i class='bx bxl-instagram ' ></i></a>
                 <a href="https://twitter.com/WDoloy" target="_blank" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="www.pinterest.com/wilsonvidyut" target="_blank" class="footer__icon"><i class='bx bxl-pinterest'></i></a>
+                <a href="https://api.whatsapp.com/send?phone=918287500298" target="_blank" class="footer__icon"><i class='bx bxl-whatsapp ' ></i></a>
             </div>
-            <p class="footer__copy">&#169; 2022 designed by Bedimcode, enhanced by WilsonVD</p>
+            <p class="footer__copy">&#169; 2022 cooked🥙 by Bedimcode, served🍽 by WilsonVD ✨</p>
         </footer>
 
 
