updated project links and form functioning

--- a/index.html
+++ b/index.html
@@ -191,22 +191,22 @@
                 <h2 class="section-title">Projects</h2>
 
                 <div class="project__container bd-grid">
-                    <a href="#" target="_blank" class="project__img">
+                    <a href="https://github.com/Wilson0406/Face-Recognition-Door-Lock" target="_blank" class="project__img">
                         <img src="assets/img/work1.png" alt="project1">
                     </a>
                     <a href="https://wilson0406.github.io/Javascript-chatbot/" target="_blank" class="project__img">
                         <img src="assets/img/work2.png" alt="project2">
                     </a>
-                    <a href="#" target="_blank" class="project__img">
+                    <a href="https://wilson0406.github.io/Javascript/" target="_blank" class="project__img">
                         <img src="assets/img/work3.png" alt="project3">
                     </a>
                     <a href="https://woogoogle.netlify.app/" target="_blank" class="project__img">
                         <img src="assets/img/work4.png" alt="project4">
                     </a>
-                    <a href="#" target="_blank" class="project__img">
+                    <a href="https://github.com/Wilson0406/License-Plate-Detection-And-Recognition" target="_blank" class="project__img">
                         <img src="assets/img/work5.png" alt="project5">
                     </a>
-                    <a href="#" target="_blank" class="project__img">
+                    <a href="https://github.com/Wilson0406/PRAYAS" target="_blank" class="project__img">
                         <img src="assets/img/work6.png" alt="project6">
                     </a>
                 </div>
@@ -217,11 +217,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Send" class="contact__button button">
+                    <form target="_blank" action="https://formsubmit.co/abcacd3096cbd5f1d5c0b336c5ca1e11" method="POST" class="contact__form">
+                        <input type="text" name="name" required placeholder="Name" class="contact__input">
+                        <input type="mail" name="email" required placeholder="Email" class="contact__input">
+                        <textarea name="message" required id="" placeholder="Your Message" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="submit" value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
