--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <a href="https://www.facebook.com/wilsonvidyut.doloy.9" target="_blank" class="footer__icon"><i class='bx bxl-facebook-square' ></i></a>
                 <a href="https://www.instagram.com/wilson_vidyut_/" target="_blank" class="footer__icon"><i class='bx bxl-instagram ' ></i></a>
                 <a href="https://twitter.com/WDoloy" target="_blank" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-                <a href="www.pinterest.com/wilsonvidyut" target="_blank" class="footer__icon"><i class='bx bxl-pinterest'></i></a>
+                <a href="https://in.pinterest.com/wilsonvidyut/" target="_blank" class="footer__icon"><i class='bx bxl-pinterest'></i></a>
                 <a href="https://api.whatsapp.com/send?phone=918287500298" target="_blank" class="footer__icon"><i class='bx bxl-whatsapp ' ></i></a>
             </div>
             <p class="footer__copy">&#169; 2022 cooked🥙 by Bedimcode, served🍽 by WilsonVD ✨</p>
