--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Wilson</span><br> Web Developer</h1>
 
-                    <a href="https://drive.google.com/file/d/1pUZurn8Yqnq06GtXSBN19cMrJ8N0X_Sj/view?usp=sharing" target="_blank" class="button">Contact</a>
+                    <a href="https://drive.google.com/file/d/1l5XorFcbcfKyEBfEEaAwIkMaHl7CkBzP/view?usp=sharing" target="_blank" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
@@ -194,10 +194,10 @@
                     <a href="https://github.com/Wilson0406/Face-Recognition-Door-Lock" target="_blank" class="project__img">
                         <img src="assets/img/work1.png" alt="project1">
                     </a>
-                    <a href="https://wilson0406.github.io/Javascript-chatbot/" target="_blank" class="project__img">
+                    <a href="https://movies-mate.herokuapp.com/" target="_blank" class="project__img">
                         <img src="assets/img/work2.png" alt="project2">
                     </a>
-                    <a href="https://wilson0406.github.io/Javascript/" target="_blank" class="project__img">
+                    <a href="https://weather-247.netlify.app/" target="_blank" class="project__img">
                         <img src="assets/img/work3.png" alt="project3">
                     </a>
                     <a href="https://woogoogle.netlify.app/" target="_blank" class="project__img">
@@ -208,6 +208,16 @@
                     </a>
                     <a href="https://github.com/Wilson0406/PRAYAS" target="_blank" class="project__img">
                         <img src="assets/img/work6.png" alt="project6">
+                    </a>
+
+                    <a href="https://wilson0406.github.io/Javascript-chatbot/" target="_blank" class="project__img">
+                        <img src="assets/img/work7.png" alt="project7">
+                    </a>
+                    <a href="https://sumit-kgolui.netlify.app/" target="_blank" class="project__img">
+                        <img src="assets/img/work8.png" alt="project8">
+                    </a>
+                    <a href="https://wilson0406.github.io/Javascript/" target="_blank" class="project__img">
+                        <img src="assets/img/work9.png" alt="project9">
                     </a>
                 </div>
             </section>
@@ -239,7 +249,7 @@
                 <a href="https://in.pinterest.com/wilsonvidyut/" target="_blank" class="footer__icon"><i class='bx bxl-pinterest'></i></a>
                 <a href="https://api.whatsapp.com/send?phone=918287500298" target="_blank" class="footer__icon"><i class='bx bxl-whatsapp ' ></i></a>
             </div>
-            <p class="footer__copy">&#169; 2022 cooked🥙 by Bedimcode, served🍽 by WilsonVD ✨</p>
+            <p class="footer__copy">&#169; 2022 cooked🥙 by WilsonVD ✨</p>
         </footer>
 
 
