Added website visit counts

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                 <a href="https://in.pinterest.com/wilsonvidyut/" target="_blank" class="footer__icon"><i class='bx bxl-pinterest'></i></a>
                 <a href="https://api.whatsapp.com/send?phone=918287500298" target="_blank" class="footer__icon"><i class='bx bxl-whatsapp ' ></i></a>
             </div>
+            <p class="footer__copy">Visits: <span id="visits"></span></p><br>
             <p class="footer__copy">&#169; 2022 cooked🥙 by WilsonVD ✨</p>
         </footer>
 
@@ -256,6 +257,11 @@
         <!-- Scroll Reveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
 
+        <!-- Visits Count -->
+        <script async src="https://api.countapi.xyz/hit/wilson-vd.netlify.app/44beaba4-9011-4280-a583-aa31c0a93fb4?callback=websiteVisits"></script>
+        <!-- Current Count: https://api.countapi.xyz/get/wilson-vd.netlify.app/a5a0386e-8da0-4d19-8564-19d591c2e376 -->
+        <!-- Reset Count: https://api.countapi.xyz/set/wilson-vd.netlify.app/a5a0386e-8da0-4d19-8564-19d591c2e376?value={whatever you want, most likely 0} -->
+        <!-- LOL You Can't reset the count to 0. 😛 -->
         <!-- Main Javascript -->
         <script src="assets/js/main.js"></script>
     </body>
